--- a/index.html
+++ b/index.html
@@ -3,23 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kalkulator GCD dan LCM Interaktif</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Game Kuis Matematika</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Kalkulator GCD dan LCM Interaktif</h1>
-
-        <div class="chat-container">
-            <div class="chat-box" id="chatBox"></div>
-        </div>
-
-        <div class="input-container">
-            <input type="text" id="userInput" placeholder="Masukkan pertanyaan atau bilangan..." />
-            <button onclick="processInput()">Kirim</button>
+        <h1>Game Kuis Matematika</h1>
+        <div class="game-container">
+            <div id="question"></div>
+            <input type="number" id="answer" placeholder="Masukkan jawaban...">
+            <button onclick="submitAnswer()">Submit</button>
+            <button onclick="clearAnswer()">Clear</button>
+            <div id="feedback"></div>
+            <div id="score"></div>
+            <div id="timer"></div>
         </div>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
