--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
         <h1>Game Kuis Matematika</h1>
         <div class="game-container">
             <button id="startButton" onclick="startGame()">Mulai Game</button>
-            <div id="question"></div>
+            <div id="question" class="question-box"></div>
             <input type="number" id="answer" placeholder="Masukkan jawaban..." disabled>
-            <button id="submitButton" onclick="submitAnswer()" disabled>Submit</button>
-            <button id="clearButton" onclick="clearAnswer()" disabled>Clear</button>
+            <div class="button-container">
+                <button id="submitButton" onclick="submitAnswer()" disabled>Submit</button>
+                <button id="clearButton" onclick="clearAnswer()" disabled>Clear</button>
+            </div>
             <div id="feedback"></div>
-            <div id="score"></div>
-            <div id="timer"></div>
+            <div id="score">Skor: 0</div>
+            <div id="timer">Waktu: 10 detik</div>
         </div>
     </div>
     <script src="script.js"></script>
